# lib-ledger-core

core/idl/wallet/cosmos/: messages.djinni
core/src/wallet/common/: AbstractAccount.cpp  AbstractAccount.hpp
core/src/wallet/cosmos/api_impl/: CosmosLikeTransactionApi.cpp
core/src/wallet/cosmos/explorers/: GaiaCosmosLikeBlockchainExplorer.cpp
core/test/integration/: CMakeLists.txt
core/test/integration/synchronization/: cosmos_synchronization.cpp
ledger-core/: CMakeLists.txt
ledger-core/lib/sqlcipher/: CMakeLists.txt
